# API

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: schema.py  validation.py
app/api/endpoints/: check.py
app/db/: db.py
app/exceptions/: exceptions.py
