[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["evgeniy <Evgexac@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
uvicorn = "^0.19.0"
asyncpg = "^0.27.0"
pydantic = "^1.10.2"
fastapi = "^0.87.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
